--- a/jsp1/pom.xml
+++ b/jsp1/pom.xml
@@ -8,9 +8,14 @@
         <!-- Tomcat 10.1 WAS 에서 JSTL을 사용하기 위해서. -->
         
         <dependency>
+            <groupId>jakarta.servlet.jsp.jstl</groupId>
+            <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.glassfish.web</groupId>
             <artifactId>jakarta.servlet.jsp.jstl</artifactId>
-            <version>2.0.0</version>
+            <version>3.0.1</version>
         </dependency>
     </dependencies>
     <build>
