--- a/spring2/pom.xml
+++ b/spring2/pom.xml
@@ -102,7 +102,6 @@
             <artifactId>HikariCP</artifactId>
             <version>5.0.1</version>
         </dependency>
-        
         <!-- MyBatis-->
         <dependency>
             <groupId>org.mybatis</groupId>
@@ -126,6 +125,12 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-tx</artifactId>
             <version>6.0.9</version>
+        </dependency>
+        <!-- Jackson-databind : REST 서비스에서 이용 -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.15.1</version>
         </dependency>
     </dependencies>
     <!-- 프로젝트 빌드 플러그인 설정 -->
