--- a/spring2/src/main/webapp/WEB-INF/web.xml
+++ b/spring2/src/main/webapp/WEB-INF/web.xml
@@ -37,7 +37,8 @@
             <param-name>contextConfigLocation</param-name>
             <param-value>/WEB-INF/servlet-context.xml</param-value>
         </init-param>
-        <load-on-startup>1</load-on-startup>
+         <load-on-startup>1</load-on-startup>
+        <async-supported>true</async-supported>
     </servlet>
     <servlet-mapping>
         <servlet-name>dispatcherServlet</servlet-name>
